  - moved containers.inc -> lib/containers.php
  - moved module.php -> lib/module.php
  - moved module_maintenance.php -> lib/module_maintenance.php
  - moved freemed-calendar-functions.inc -> lib/calendar-functions.php
  - moved move_appointment.php3 -> move_appointment.php3
  - moved physician_day_view.php3 -> physician_day_view.php
  - moved physician_week_view.php3 -> physician_week_view.php

* Thu Dec 21 2000 rufustfirefly
  - more work on typeOfServiceMaintenance, now using module_maintenance.php
    for the prototype

* Thu Dec 14 2000 rufustfirefly
  - moved module.php inside if(!defined())'s
  - added module_maintenance.php for category classification

* Wed Dec 13 2000 rufustfirefly
  - started implementing new phpwebtools 0.2 PHP module loader classes and
    functions -- beginning of a new era in PHP application development
  - created modules/ directory with test module and awful port of
    type_of_service module to new style. should make intermediate classes,
    then extend *them* for the maintenance modules, to allow for less coding
    and more sweet goodness.

* Tue Dec 12 2000 rufustfirefly
  - moved payment_record.php over to using the wizard class
  - fixed display problems in payment_record ledger
  - added konqueror to the BROWSERS list
  - added Fred Forester to the CREDITS list
  - moved roomequip.php3 -> roomequip.php
  - moved tos.php3 -> type_of_service.php
  - procedure.php:
    - fixed back from delete action / fixed delete action
    - fixed stupid break from yesterday
    - cleaned up output ... centering, etc

* Mon Dec 11 2000 rufustfirefly
  - increased version number to 0.2.0-20001211 (CVS version)
  - moved in gettext and bcmath module detection into global.var.inc to 
    stem the run on list questions 
  - commited procedure.php3 with wizard code. due to recompiling PHP on my
    box without bcmath support by mistake, can't check it for problems.
  - moved procedure.php3 -> procedure.php